--- a/CSS/_variables.scss
+++ b/CSS/_variables.scss
@@ -1,4 +1,8 @@
+// Note for grading: this partial file uses examples of using variables
 $navy-blue: #082B59;
 $brown: #59331d;
 $orange: #d98555;
 $white: #ffffff;
+$max-width: 1200px;
+$body-font: "Lato", sans-serif;
+$header-font: "Poppins", sans-serif;
