--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -7,9 +7,9 @@ html {
 }
 
 body {
-  background-color: #082B59;
   margin: 0;
   padding: 0;
+  background-color: #082B59;
   font-family: "Lato", sans-serif;
   line-height: 2;
 }
@@ -19,8 +19,8 @@ h1, h2, h3 {
 }
 
 img, source {
-  width: 100%;
   max-width: 1200px;
+  width: 100%;
   height: auto;
   border-radius: 10px;
 }
@@ -79,20 +79,20 @@ nav a:hover {
 
 .main {
   max-width: 1200px;
-  margin: 0 auto;
-  padding: 2rem;
   display: grid;
   grid-template-columns: 1fr;
+  margin: 0 auto;
+  padding: 2rem;
   gap: 1rem;
   justify-content: space-between;
 }
 
 .container {
   max-width: 1200px;
-  margin: 0 auto;
-  padding: 2rem;
   display: flex;
   flex-flow: row wrap;
+  margin: 0 auto;
+  padding: 2rem;
   justify-content: space-between;
   gap: 2rem;
 }
@@ -129,21 +129,20 @@ footer {
 }
 
 footer ul {
-  list-style-type: none;
   margin: 0;
   padding: 0;
   display: flex;
   flex-flow: row wrap;
+  list-style-type: none;
   justify-content: center;
 }
 
 footer a {
-  color: #f2f2f2;
+  color: #ffffff;
   font-size: 2rem;
   display: block;
   margin: 0 1rem 3rem 1rem;
 } /*# sourceMappingURL=styles.css.map */
-/* Tablet Screen Size */
 @media (min-width: 768px) {
   nav ul {
     display: flex;
